# GLFW-CMake-starter

./: .gitmodules  CMakeLists.txt
include/: camera.h  mesh.h  model.h  shader.h
include/glad/: glad.h
shaders/: 3.3.shader.fs  3.3.shader.vs  coordinate_shader.fs  transform_shader.fs
shaders/advanced_glsl/: blend.fs
shaders/advanced_glsl2/: shader1.fs  shader2.fs  shader4.fs
shaders/advanced_lighting/: screen.fs
shaders/anti_aliasing/: blend.fs  blend.vs
shaders/cubemap/: blend.fs  nano.fs  nano.vs
shaders/depth_testing/: depth_testing.fs
shaders/framebuffers/: blend.fs
shaders/gamma_correction/: blend.fs  blend.vs  screen.vs
shaders/geometry_shader/: blend.gs  blend.vs
shaders/geometry_shader2/: blend.vs
shaders/geometry_shader3/: blend.fs  blend.gs  normal.gs  normal.vs
shaders/instancing/: blend.vs
shaders/instancing2/: blend.vs  shader.vs
shaders/light_caster/: material.fs  point_material.fs  spot_material.fs
shaders/lighting/: shader.fs  shader.vs
shaders/lighting_maps/: material.fs
shaders/materials/: shader.fs
shaders/multiple_lights/: multiple_lights.fs
shaders/normal_mapping/: shader.fs  shader.vs
shaders/parallax_mapping/: shader.fs
shaders/point_shadow/: blend.fs  shader.fs  shader.vs
shaders/shadow_mapping/: screen.vs  shader.fs  shader.vs
shaders/test_mesh/: multiple_lights.fs  multiple_lights.vs
src/: advanced_glsl.cpp  advanced_glsl2.cpp  advanced_lighting.cpp  anti_aliasing.cpp  basic_lighting.cpp  blend.cpp  camera.cpp  camera_class.cpp  color.cpp  coordinate_systems.cpp  cubemap.cpp  depth_testing.cpp  exercise_triangle.cpp  framebuffers.cpp  gamma_correction.cpp  geometry_shader.cpp  geometry_shader2.cpp  geometry_shader3.cpp  hello_shaders1.cpp  hello_texture.cpp  hello_triangle.cpp  hello_triangle1.cpp  hello_window.cpp  instancing.cpp  instancing2.cpp  light_caster.cpp  light_caster_point.cpp  light_caster_spot.cpp  lighting_maps.cpp  materials.cpp  multiple_lights.cpp  normal_mapping.cpp  parallax_mapping.cpp  point_shadow.cpp  shaders.cpp  shadow_mapping.cpp  stencil_testing.cpp  test_mesh.cpp  translation.cpp
src/lib/: glad.c
